customer done except for the bar chart

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 Project/__pycache__/
+Project/AMS/.idea/AMS.iml
+Project/AMS/.idea/encodings.xml
+Project/AMS/.idea/misc.xml
+Project/AMS/.idea/modules.xml
+Project/AMS/.idea/vcs.xml
+Project/AMS/.idea/workspace.xml
+Project/AMS/__pycache__/controllers.cpython-36.pyc
+Project/AMS/__pycache__/models.cpython-36.pyc
