--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ Project/AMS/__pycache__/auth.cpython-36.pyc
 Project/AMS/__pycache__/a.cpython-36.pyc
 Project/AMS/__pycache__/__init__.cpython-36.pyc
 *.pyc
+Project/AMS/.vscode/launch.json
